# LinkedIn_Feed_Bot

./: .gitignore  LinkedIn.py  LinkedInBot.py  README.md  data.csv  md_to_pdf.py  md_writer.py  pyproject.toml  setup.py  test.ipynb  test.md  test.py  utils_functions.py
LinkedIn_Feed_Bot/: LinkedInBot.py  md_to_pdf.py  md_writer.py  utils.py
linkedin_feed_bot/: LinkedInBot.py  md_to_pdf.py  utils.py
tests/: test_crawler.py
