[tool.poetry]
name = "linkedin_feed_bot"
version = "0.1.3"
description = "crawls your LinkedIn news feed in order to create a PDF with a weekly summary of your chosen most important topic."
authors = ["Adriel Martins <adrielfalcao@gmail.com>"]
license = "GNU General Public License v3 (GPLv3)"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
pandas = "^1.2.5"
xhtml2pdf = "^0.2.5"
Markdown = "^3.3.4"
webdriver-manager = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
